--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,50 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="vertical"
     tools:context="com.yaho.facelapse.MainActivity">
 
+    <TextView
+        android:id="@+id/FaceLapse"
+        android:layout_width="match_parent"
+        android:layout_height="270dp"
+        android:layout_weight="1"
+        android:text="Face Lapse"
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_light_default"
+        android:textSize="100sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/buttonselfie"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="0dp"
             android:layout_weight="1"
+            android:background="@drawable/btn_selfie"
             android:gravity="center"
-            android:onClick="onClick"
-            android:text="@string/selfie" />
+            android:onClick="onClick" />
 
         <Button
             android:id="@+id/buttonalbum"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="0dp"
             android:layout_weight="1"
+            android:background="@drawable/btn_album"
             android:gravity="center"
-            android:onClick="onClick"
-            android:text="@string/album" />
+            android:onClick="onClick" />
+
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonmanual"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:layout_gravity="center_vertical|center_horizontal"
         android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:gravity="center"
         android:onClick="onClick"
-        android:text="@string/manual" />
+        android:textSize="20sp"
+        android:background="@drawable/ic_questionmark" />
 
 </LinearLayout>
