--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/bg"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
@@ -18,6 +18,7 @@
         android:textAlignment="center"
         android:textColor="@color/common_google_signin_btn_text_light_default"
         android:textSize="100sp"
+        android:layout_marginTop="50dp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -26,27 +27,61 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/buttonselfie"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/btn_selfie"
-            android:gravity="center"
-            android:onClick="onClick" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/buttonalbum"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="0dp"
+            <Button
+                android:id="@+id/buttonselfie"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_marginTop="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_selfie"
+                android:gravity="center"
+                android:onClick="onClick" />
+
+            <TextView
+                android:id="@+id/textSelfie"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="50dp"
+                android:gravity="center"
+                android:textSize="50sp"
+                android:text="Selfie" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/btn_album"
-            android:gravity="center"
-            android:onClick="onClick" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/buttonalbum"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_marginTop="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_album"
+                android:gravity="center"
+                android:onClick="onClick" />
+
+            <TextView
+                android:id="@+id/textAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginBottom="50dp"
+                android:gravity="center"
+                android:textSize="50sp"
+                android:text="Album" />
+        </LinearLayout>
 
     </LinearLayout>
 
