--- a/app/src/main/res/layout/activitiy_selfie.xml
+++ b/app/src/main/res/layout/activitiy_selfie.xml
@@ -7,47 +7,43 @@
     android:baselineAligned="false"
     android:id="@+id/layout"
     tools:context="com.yaho.facelapse.MainActivity">
-    <SurfaceView
-        android:id="@+id/surfaceView"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <SurfaceView
+            android:id="@+id/surfaceView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="60dp"
+            android:paddingLeft="60dp"
+            android:paddingRight="60dp"
+            android:paddingTop="30dp"
+            android:src="@drawable/faceline" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/buttonselfie"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="10dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="1dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="SELFIE" />
+            android:text="SELFIE"
+            android:layout_width="wrap_content" />
 
-        <Button
-            android:id="@+id/buttonalbum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="ALBUM"/>
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/faceline"
-        android:paddingBottom="60dp"
-        android:paddingLeft="60dp"
-        android:paddingRight="60dp"
-        android:paddingTop="30dp"
-        />
 
 
 </FrameLayout>
