--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    android:background="@drawable/bg_fl_c"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
@@ -12,88 +12,42 @@
     <TextView
         android:id="@+id/FaceLapse"
         android:layout_width="match_parent"
-        android:layout_height="270dp"
+        android:layout_height="200dp"
         android:layout_weight="1"
+        android:layout_marginTop="30dp"
         android:text="Face Lapse"
         android:textAlignment="center"
-        android:textSize="100sp"
-        android:layout_marginTop="50dp"
-        android:textStyle="bold" />
+        android:textSize="100sp" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/buttonselfie"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="130dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:background="@drawable/btn_selfie"
+        android:gravity="center"
+        android:onClick="onClick" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/buttonselfie"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_marginTop="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/btn_selfie"
-                android:gravity="center"
-                android:onClick="onClick" />
-
-            <TextView
-                android:id="@+id/textSelfie"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginBottom="50dp"
-                android:gravity="center"
-                android:textSize="50sp"
-                android:text="Selfie" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/buttonalbum"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_marginTop="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/btn_album"
-                android:gravity="center"
-                android:onClick="onClick" />
-
-            <TextView
-                android:id="@+id/textAlbum"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginBottom="50dp"
-                android:gravity="center"
-                android:textSize="50sp"
-                android:text="Album" />
-        </LinearLayout>
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/buttonalbum"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_weight="1"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/btn_album"
+        android:gravity="center"
+        android:onClick="onClick" />
 
     <Button
         android:id="@+id/buttonmanual"
         android:layout_width="100dp"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_vertical|center_horizontal"
         android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:gravity="center"
         android:onClick="onClick"
         android:textSize="20sp"
-        android:background="@drawable/ic_questionmark" />
+        android:background="@drawable/ic_q_g" />
 
 </LinearLayout>
