--- a/app/src/main/res/drawable/btn_album.xml
+++ b/app/src/main/res/drawable/btn_album.xml
@@ -4,12 +4,12 @@
     <!-- 평상시 상태 -->
     <item
         android:state_pressed="false"
-        android:drawable="@drawable/ic_btn_a"
+        android:drawable="@drawable/ic_a_new"
         />
 
     <!-- 버튼이 눌렸을 때 -->
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/ic_btn_a_clicked"
+        android:drawable="@drawable/ic_a_new2"
         />
 </selector>
